Fix: Recording button text and icon did not have a gap

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -2634,6 +2634,10 @@ div[data-role=controlgroup] a.ui-btn-active {
     order: 4;
 }
 
+.recordingButton{
+    gap: 1ch;
+}
+
 .detailsGroupItem,
 .trackSelections .selectContainer {
     max-width: unset !important;
